@@ -6,11 +6,14 @@
 # Core modules.
 core/core
 core/kerl
+
+# Index and dependencies.
 index/*
 core/index
 core/deps
 
 # Core modules, continued.
+core/beam-cache
 core/erlc
 core/docs
 core/rel
